--- a/script_02.Rmd
+++ b/script_02.Rmd
@@ -21,14 +21,26 @@ knitr::opts_chunk$set(echo = TRUE)
 
 Once you have finished cleaning your data, figure out the course with the highest enrollment. And figure out how many students are enrolled in Gov 50. If you get a number much lower than 151, you have done something wrong . . .
 
-
-
+```{r}
+en_fall_2020 <- read_excel("raw_data/class_enrollment_summary_by_term_9-17-2020.xlsx", skip = 3) %>%
+  drop_na() %>%
+  filter(UGrad >= 10) %>%
+  arrange(desc(UGrad)) %>%
+  clean_names() 
+View(en_fall_2020)
+```
 
 ### Scene 2
 
 **Prompt:** Create a bar plot of the 10 biggest courses. Order the plot so that courses appear in descending order. You will want to use coord_flip() to make your plot easy to read.
 
-
+```{r}
+en_fall_2020 %>%
+  arrange(desc(total)) %>%
+  slice(1:10) %>% 
+  ggplot(aes(x = course_title, y = total)) +
+  geom_col(fct_reorder)) 
+```
 
 
 ### Scene 3
